# slippage-preserving-reshaping

./: CMakeLists.txt  README.md
apps/reshaping_app/: CMakeLists.txt  application.cpp  camera.h  json_utils.h  main.cpp  selection_handler.cpp  straight_chains_renderer.cpp
apps/reshaping_demo/: CMakeLists.txt  main.cpp
libs/ca_essentials/: CMakeLists.txt
libs/ca_essentials/include/ca_essentials/core/: json_utils.h
libs/ca_essentials/include/ca_essentials/ui/: imgui_font_provider.h
libs/ca_essentials/source/ui/: window.cpp
models/: TET_1KF.deform  bob.deform  cactus.deform  cheburashka.cam  cheburashka.deform  cone.deform  cube_12F.deform  cube_2kF.cam  cube_2kF.deform  cube_400F.deform  cup_glass_extruded.cam  cup_glass_extruded.deform  cup_glass_extruded.straight  cup_glass_extruded_high_res.deform  cylinder_1kF.cam  cylinder_1kF.deform  e_car_extruded.deform  e_car_extruded_high_res.cam  e_car_extruded_high_res.deform  elephant.deform  hammer.cam  hammer.deform  hammer_high_res.deform  license.txt  rectangle_extruded.cam  rectangle_extruded.deform  rectangle_extruded.straight  rectangle_extruded_high_res.deform  rowboat.cam  rowboat.deform  rowboat_high_res.deform  screwdriver.cam  screwdriver.deform  spades_extruded.cam  spades_extruded.deform  spades_extruded_high_res.deform  spanner.cam  spanner.deform  sphere.cam  sphere.deform  (+8 more)
source/mesh_reshaping/: handle_error_distribution.cpp  precompute_reshaping_data.cpp  vertex_solve.cpp
